--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     width: 100vw;
     height: 100vh;
     background: linear-gradient(rgba(0, 0,0,0.7),rgba(0, 0,0,0.7)),url("https://149695847.v2.pressablecdn.com/wp-content/uploads/2019/04/ntflxx-1540x866.png");
+    background-size: cover;
 }
 header{
     display: flex;
